lib/parse-hanson-string.js
"use strict";

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

module.exports = (function () {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() {
      this.constructor = child;
    }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.offset = offset;
    this.line = line;
    this.column = column;

    this.name = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        peg$FAILED = {},
        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction = peg$parsestart,
        peg$c0 = { type: "other", description: "expression" },
        peg$c1 = peg$FAILED,
        peg$c2 = function peg$c2(e) {
      return e;
    },
        peg$c3 = "course",
        peg$c4 = { type: "literal", value: "course", description: "\"course\"" },
        peg$c5 = null,
        peg$c6 = "s",
        peg$c7 = { type: "literal", value: "s", description: "\"s\"" },
        peg$c8 = "where",
        peg$c9 = { type: "literal", value: "where", description: "\"where\"" },
        peg$c10 = function peg$c10(count, where) {
      return {
        $type: "where",
        $count: count,
        $where: where
      };
    },
        peg$c11 = "occurrence",
        peg$c12 = { type: "literal", value: "occurrence", description: "\"occurrence\"" },
        peg$c13 = "of",
        peg$c14 = { type: "literal", value: "of", description: "\"of\"" },
        peg$c15 = function peg$c15(count, course) {
      return {
        $type: "occurrence",
        $count: count,
        course: course
      };
    },
        peg$c16 = "{",
        peg$c17 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c18 = "}",
        peg$c19 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c20 = function peg$c20(q) {
      return q;
    },
        peg$c21 = { type: "other", description: "qualification-or" },
        peg$c22 = "|",
        peg$c23 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c24 = function peg$c24(lhs, rhs) {
      return {
        $type: "boolean",
        $or: [lhs].concat("$or" in rhs ? rhs.$or : [rhs])
      };
    },
        peg$c25 = { type: "other", description: "qualification-and" },
        peg$c26 = "&",
        peg$c27 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c28 = function peg$c28(lhs, rhs) {
      return {
        $type: "boolean",
        $and: [lhs].concat("$and" in rhs ? rhs.$and : [rhs])
      };
    },
        peg$c29 = [],
        peg$c30 = /^[a-z0-9_\-]/i,
        peg$c31 = { type: "class", value: "[a-z0-9_\\-]i", description: "[a-z0-9_\\-]i" },
        peg$c32 = void 0,
        peg$c33 = "(",
        peg$c34 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c35 = function peg$c35(word) {
      return word.join("");
    },
        peg$c36 = "from",
        peg$c37 = { type: "literal", value: "from", description: "\"from\"" },
        peg$c38 = "courses",
        peg$c39 = { type: "literal", value: "courses", description: "\"courses\"" },
        peg$c40 = function peg$c40(f, q) {
      return Object.assign(f, { $where: q });
    },
        peg$c41 = function peg$c41(key, op, value) {
      var _$value;

      return {
        $type: "qualification",
        $key: key,
        $value: (_$value = {}, _defineProperty(_$value, op, value), _defineProperty(_$value, "$type", "operator"), _$value)
      };
    },
        peg$c42 = /^[a-z]/i,
        peg$c43 = { type: "class", value: "[a-z]i", description: "[a-z]i" },
        peg$c44 = function peg$c44(chars) {
      return chars.join("");
    },
        peg$c45 = { type: "other", description: "function" },
        peg$c46 = ")",
        peg$c47 = { type: "literal", value: ")", description: "\")\"" },
        peg$c48 = function peg$c48(name, prop) {
      return {
        $name: name,
        $prop: prop,
        $type: "function"
      };
    },
        peg$c49 = "<=",
        peg$c50 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c51 = function peg$c51() {
      return "$lte";
    },
        peg$c52 = "<",
        peg$c53 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c54 = function peg$c54() {
      return "$lt";
    },
        peg$c55 = "==",
        peg$c56 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c57 = "=",
        peg$c58 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c59 = function peg$c59() {
      return "$eq";
    },
        peg$c60 = ">=",
        peg$c61 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c62 = function peg$c62() {
      return "$gte";
    },
        peg$c63 = ">",
        peg$c64 = { type: "literal", value: ">", description: "\">\"" },
        peg$c65 = "!=",
        peg$c66 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c67 = function peg$c67() {
      return "$ne";
    },
        peg$c68 = { type: "other", description: "whitespace" },
        peg$c69 = /^[ \n\t\r]/,
        peg$c70 = { type: "class", value: "[ \\n\\t\\r]", description: "[ \\n\\t\\r]" },
        peg$c71 = "zero",
        peg$c72 = { type: "literal", value: "zero", description: "\"zero\"" },
        peg$c73 = function peg$c73() {
      return 0;
    },
        peg$c74 = "one",
        peg$c75 = { type: "literal", value: "one", description: "\"one\"" },
        peg$c76 = function peg$c76() {
      return 1;
    },
        peg$c77 = "two",
        peg$c78 = { type: "literal", value: "two", description: "\"two\"" },
        peg$c79 = function peg$c79() {
      return 2;
    },
        peg$c80 = "three",
        peg$c81 = { type: "literal", value: "three", description: "\"three\"" },
        peg$c82 = function peg$c82() {
      return 3;
    },
        peg$c83 = "four",
        peg$c84 = { type: "literal", value: "four", description: "\"four\"" },
        peg$c85 = function peg$c85() {
      return 4;
    },
        peg$c86 = "five",
        peg$c87 = { type: "literal", value: "five", description: "\"five\"" },
        peg$c88 = function peg$c88() {
      return 5;
    },
        peg$c89 = "six",
        peg$c90 = { type: "literal", value: "six", description: "\"six\"" },
        peg$c91 = function peg$c91() {
      return 6;
    },
        peg$c92 = "seven",
        peg$c93 = { type: "literal", value: "seven", description: "\"seven\"" },
        peg$c94 = function peg$c94() {
      return 7;
    },
        peg$c95 = "eight",
        peg$c96 = { type: "literal", value: "eight", description: "\"eight\"" },
        peg$c97 = function peg$c97() {
      return 8;
    },
        peg$c98 = "nine",
        peg$c99 = { type: "literal", value: "nine", description: "\"nine\"" },
        peg$c100 = function peg$c100() {
      return 9;
    },
        peg$c101 = "ten",
        peg$c102 = { type: "literal", value: "ten", description: "\"ten\"" },
        peg$c103 = function peg$c103() {
      return 10;
    },
        peg$c104 = "eleven",
        peg$c105 = { type: "literal", value: "eleven", description: "\"eleven\"" },
        peg$c106 = function peg$c106() {
      return 11;
    },
        peg$c107 = "twelve",
        peg$c108 = { type: "literal", value: "twelve", description: "\"twelve\"" },
        peg$c109 = function peg$c109() {
      return 12;
    },
        peg$c110 = "thirteen",
        peg$c111 = { type: "literal", value: "thirteen", description: "\"thirteen\"" },
        peg$c112 = function peg$c112() {
      return 13;
    },
        peg$c113 = "fourteen",
        peg$c114 = { type: "literal", value: "fourteen", description: "\"fourteen\"" },
        peg$c115 = function peg$c115() {
      return 14;
    },
        peg$c116 = "fifteen",
        peg$c117 = { type: "literal", value: "fifteen", description: "\"fifteen\"" },
        peg$c118 = function peg$c118() {
      return 15;
    },
        peg$c119 = "sixteen",
        peg$c120 = { type: "literal", value: "sixteen", description: "\"sixteen\"" },
        peg$c121 = function peg$c121() {
      return 16;
    },
        peg$c122 = "seventeen",
        peg$c123 = { type: "literal", value: "seventeen", description: "\"seventeen\"" },
        peg$c124 = function peg$c124() {
      return 17;
    },
        peg$c125 = "eighteen",
        peg$c126 = { type: "literal", value: "eighteen", description: "\"eighteen\"" },
        peg$c127 = function peg$c127() {
      return 18;
    },
        peg$c128 = "nineteen",
        peg$c129 = { type: "literal", value: "nineteen", description: "\"nineteen\"" },
        peg$c130 = function peg$c130() {
      return 19;
    },
        peg$c131 = "twenty",
        peg$c132 = { type: "literal", value: "twenty", description: "\"twenty\"" },
        peg$c133 = function peg$c133() {
      return 20;
    },
        peg$c134 = /^[0-9]/,
        peg$c135 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c136 = function peg$c136(num) {
      return parseInt(num.join(""), 10);
    },
        peg$c137 = "!",
        peg$c138 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c139 = function peg$c139(value) {
      return {
        $type: "boolean",
        $not: value
      };
    },
        peg$c140 = function peg$c140(value) {
      return value;
    },
        peg$c141 = function peg$c141(lhs, rhs) {
      return {
        $type: "boolean",
        $or: [lhs].concat("$or" in rhs ? rhs.$or : [rhs])
      };
    },
        peg$c142 = function peg$c142(lhs, rhs) {
      return {
        $type: "boolean",
        $and: [lhs].concat("$and" in rhs ? rhs.$and : [rhs])
      };
    },
        peg$c143 = "all",
        peg$c144 = { type: "literal", value: "all", description: "\"all\"" },
        peg$c145 = "none",
        peg$c146 = { type: "literal", value: "none", description: "\"none\"" },
        peg$c147 = "any",
        peg$c148 = { type: "literal", value: "any", description: "\"any\"" },
        peg$c149 = ",",
        peg$c150 = { type: "literal", value: ",", description: "\",\"" },
        peg$c151 = function peg$c151(second) {
      return second;
    },
        peg$c152 = function peg$c152(val, rest) {
      return [val].concat(rest);
    },
        peg$c153 = function peg$c153(count, of) {
      var flattened = Array.prototype.concat.apply([], of);

      if (count === "all") count = flattened.length;

      if (count && flattened.length < count) throw new Error("this of-statement will never succeed; you requested " + count + " items, but only input " + flattened.length + " options (" + JSON.stringify(flattened) + ").");

      return {
        $type: "of",
        $count: count,
        $of: flattened
      };
    },
        peg$c154 = "credit",
        peg$c155 = { type: "literal", value: "credit", description: "\"credit\"" },
        peg$c156 = "department",
        peg$c157 = { type: "literal", value: "department", description: "\"department\"" },
        peg$c158 = "children",
        peg$c159 = { type: "literal", value: "children", description: "\"children\"" },
        peg$c160 = function peg$c160() {
      return { $from: "children" };
    },
        peg$c161 = "filter",
        peg$c162 = { type: "literal", value: "filter", description: "\"filter\"" },
        peg$c163 = function peg$c163() {
      return { $from: "filter" };
    },
        peg$c164 = function peg$c164(where) {
      return { $from: "where", $where: where };
    },
        peg$c165 = function peg$c165(count, what, from) {
      return Object.assign({
        $type: "modifier",
        $count: count,
        $what: what
      }, from);
    },
        peg$c166 = ".",
        peg$c167 = { type: "literal", value: ".", description: "\".\"" },
        peg$c168 = function peg$c168(semester) {
      return { semester: semester };
    },
        peg$c169 = function peg$c169(year, sem) {
      return Object.assign(sem || {}, { year: year });
    },
        peg$c170 = function peg$c170(section, y_s) {
      return Object.assign(y_s || {}, { section: section });
    },
        peg$c171 = function peg$c171(dept, num, info) {
      return Object.assign({ $type: "course" }, Object.assign(info || {}, Object.assign(dept || fetchDept() || {}, num)));
    },
        peg$c172 = /^[A-Z]/,
        peg$c173 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c174 = function peg$c174(c1, c2) {
      return c1 + c2;
    },
        peg$c175 = function peg$c175(chars) {
      return { dept: chars.join(""), type: "joined" };
    },
        peg$c176 = "/",
        peg$c177 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c178 = function peg$c178(l1, l2) {
      return { dept: l1 + l2, type: "seperate" };
    },
        peg$c179 = function peg$c179(dept1, part2) {
      var type = part2.type;
      var dept2 = part2.dept;

      var department;
      if (type === "joined") department = { department: [dept1 + dept2] };else if (type === "seperate") {
        dept1 = expandDepartment(dept1);
        dept2 = expandDepartment(dept2);
        department = { department: [dept1, dept2] };
      }
      storeDept(department);
      return department;
    },
        peg$c180 = { type: "other", description: "course number" },
        peg$c181 = function peg$c181(n2, n3) {
      return n2 + n3;
    },
        peg$c182 = "XX",
        peg$c183 = { type: "literal", value: "XX", description: "\"XX\"" },
        peg$c184 = "I",
        peg$c185 = { type: "literal", value: "I", description: "\"I\"" },
        peg$c186 = "L",
        peg$c187 = { type: "literal", value: "L", description: "\"L\"" },
        peg$c188 = function peg$c188(p1, p2, international, lab) {
      var number = undefined;
      var level = undefined;

      var result = {};
      if (p2 === "XX") {
        result.level = parseInt(p1) * 100;
      } else {
        result.number = parseInt(p1 + p2);
      }

      if (international) result.international = true;
      if (lab) result.lab = true;

      return result;
    },
        peg$c189 = /^[A-Z*]/,
        peg$c190 = { type: "class", value: "[A-Z*]", description: "[A-Z*]" },
        peg$c191 = function peg$c191(nums) {
      return nums.join("");
    },
        peg$c192 = "*",
        peg$c193 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c194 = /^[1-5*]/,
        peg$c195 = { type: "class", value: "[1-5*]", description: "[1-5*]" },
        peg$c196 = { type: "other", description: "requirement reference" },
        peg$c197 = /^[A-Z0-9]/,
        peg$c198 = { type: "class", value: "[A-Z0-9]", description: "[A-Z0-9]" },
        peg$c199 = /^[A-Z0-9\- ]/i,
        peg$c200 = { type: "class", value: "[A-Z0-9\\- ]i", description: "[A-Z0-9\\- ]i" },
        peg$c201 = function peg$c201(initial, rest) {
      return initial + rest.join("");
    },
        peg$c202 = function peg$c202(title) {
      return {
        $type: "reference",
        $requirement: title.trim()
      };
    },
        peg$currPos = 0,
        peg$reportedPos = 0,
        peg$cachedPos = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos = 0,
        peg$maxFailExpected = [],
        peg$silentFails = 0,
        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(null, [{ type: "other", description: description }], peg$reportedPos);
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) {
              details.line++;
            }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) {
        return;
      }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function (a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) {
            return ch.charCodeAt(0).toString(16).toUpperCase();
          }

          return s.replace(/\\/g, "\\\\").replace(/"/g, "\\\"").replace(/\x08/g, "\\b").replace(/\t/g, "\\t").replace(/\n/g, "\\n").replace(/\f/g, "\\f").replace(/\r/g, "\\r").replace(/[\x00-\x07\x0B\x0E\x0F]/g, function (ch) {
            return "\\x0" + hex(ch);
          }).replace(/[\x10-\x1F\x80-\xFF]/g, function (ch) {
            return "\\x" + hex(ch);
          }).replace(/[\u0180-\u0FFF]/g, function (ch) {
            return "\\u0" + hex(ch);
          }).replace(/[\u1080-\uFFFF]/g, function (ch) {
            return "\\u" + hex(ch);
          });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc,
            foundDesc,
            i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1 ? expectedDescs.slice(0, -1).join(", ") + " or " + expectedDescs[expected.length - 1] : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(message !== null ? message : buildMessage(expected, found), expected, found, pos, posDetails.line, posDetails.column);
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseor();

      return s0;
    }

    function peg$parseexpr() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenot();
        if (s2 === peg$FAILED) {
          s2 = peg$parseparenthetical();
          if (s2 === peg$FAILED) {
            s2 = peg$parsecourse();
            if (s2 === peg$FAILED) {
              s2 = peg$parsewhere();
              if (s2 === peg$FAILED) {
                s2 = peg$parseoccurrence();
                if (s2 === peg$FAILED) {
                  s2 = peg$parsereference();
                  if (s2 === peg$FAILED) {
                    s2 = peg$parseof();
                    if (s2 === peg$FAILED) {
                      s2 = peg$parsemodifier();
                    }
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c2(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c0);
        }
      }

      return s0;
    }

    function peg$parsewhere() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parsecounter();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c3) {
            s3 = peg$c3;
            peg$currPos += 6;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c4);
            }
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 115) {
              s4 = peg$c6;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c7);
              }
            }
            if (s4 === peg$FAILED) {
              s4 = peg$c5;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                if (input.substr(peg$currPos, 5) === peg$c8) {
                  s6 = peg$c8;
                  peg$currPos += 5;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) {
                    peg$fail(peg$c9);
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsequalifier();
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c10(s1, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseoccurrence() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parsecounter();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 10) === peg$c11) {
            s3 = peg$c11;
            peg$currPos += 10;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) {
              peg$fail(peg$c12);
            }
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 115) {
              s4 = peg$c6;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) {
                peg$fail(peg$c7);
              }
            }
            if (s4 === peg$FAILED) {
              s4 = peg$c5;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                if (input.substr(peg$currPos, 2) === peg$c13) {
                  s6 = peg$c13;
                  peg$currPos += 2;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) {
                    peg$fail(peg$c14);
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsecourse();
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c15(s1, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c1;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c1;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c1;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parsequalifier() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 123) {
        s1 = peg$c16;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) {
          peg$fail(peg$c17);
        }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseor_q();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 125) {
                s5 = peg$c18;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) {
                  peg$fail(peg$c19);
                }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c20(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c1;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c1;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c1;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c1;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c1;
      }

      return s0;
    }

    function peg$parseor_q() {
      var s0, s1, s2, s3, s4, s5;
